src/pages/ListPage.module.css
.list-page h1 {
  margin: 15px;
}

.list-page ul {
  width: 90vw;
  margin: 40px auto 15px;
  overflow: scroll;
}

.list-page li {
  list-style: none;
  display: flex;
  justify-content: space-between;
  padding: 10px;
  margin-bottom: 5px;
  border: 1px solid var(--primary-color);
  border-radius: 10px;
  text-align: left;
}

.action {
  display: flex;
  align-items: center;
  gap: 10px;
}

.navigate {
  display: flex;
  width: 90vw;
  margin: auto;
}

.list-page button {
  flex: 1;
  background-color: var(--primary-color);
  border: 1px solid var(--primary-color);
  border-radius: 10px;
  color: var(--light);
  font-size: inherit;
  padding: 10px 20px;
  margin: 10px;
}

